<resources>
    <string name="app_name">Fitness AR</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="todo">TODO</string>
    <string name="diet">Diet</string>
    <string name="ar_workout">AR Workout</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="answer">Answer</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="done">Done</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="id_number">ID Number</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="recipe">Recipe</string>
    <string name="zz">TODO</string>
    <string name="aa">TODO</string>
</resources>