<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ChooseAct">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="320dp"
            android:layout_height="250dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/txtSlogan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text=" Fitness AR App"
            android:textColor="#000000"
            android:textSize="28sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnsignup"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="#5A5757"
            android:text="@string/sign_up"
            android:textColor="#070000"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnsignin"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="#4C4948"
            android:text="@string/sign_in"
            android:textColor="#000000"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</RelativeLayout>
